# drone_fleet_project

.catkin_tools/profiles/default/: devel_collisions.txt
project_pkg/: CMakeLists.txt  package.xml
project_pkg/launch/: multi_uav_mavros_sitl.launch  single_auv_mavros_sitl.launch
project_pkg/resource/: crazy2fly.yaml  hovering_crazy2fly.launch
project_pkg/src/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  offboard_node.cpp
project_pkg/src/catkin_generated/: generate_cached_setup.py  package.cmake  setup_cached.sh
project_pkg/src/catkin_generated/stamps/project_pkg/: _setup_util.py.stamp  package.xml.stamp
project_pkg/src/devel/: .rosinstall  local_setup.sh  setup.sh
project_pkg/src/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
project_pkg/src/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
project_pkg/src/gtest/googletest/: CTestTestfile.cmake  Makefile
project_pkg/urdf/: crazy2fly.sdf
